# rust-learn

./: Cargo.toml  LICENSE  README.md  build.rs  runfromrust.py
libmath/: CMakeLists.txt  math.c
src/: lib.rs
src/recipes/: mod.rs
src/recipes/error/: mod.rs
src/recipes/ffi/: dynload.rs  link.rs  mod.rs
src/recipes/iterators/: extend.rs  generic.rs  intoiterator_trait.rs  iter_fn.rs  itertoolslib.rs  mod.rs  simple.rs
src/recipes/lifetime/: channels.rs  clojures.rs  lifetimes.rs  mod.rs  pool.rs  refcount.rs
src/recipes/patterns/: builder.rs  factory.rs  macros.rs  mod.rs
src/recipes/testing/: mock.rs
test_data/: transactions.invalid.json  transactions.json
