[package]
name = "rust-recipes"
version = "0.1.0"
authors = ["Leonardo Rossetti <me@lrossetti.com>"]
edition = "2018"
build="build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0.39"
itertools = "0.8.2"
futures = "0.3.1"
cmake = "0.1.42"
libloading = "0.5.2"
failure = "0.1.5"
reqwest = "0.9.24"

[build-dependencies]
cmake = "0.1.42"